# sockets_toys

./: CMakeLists.txt  README.md  main.cpp
host_byte_order/: host_byte_order.cpp
include/: unp.h
inect_fun/: ntop6_toy.cpp
src/host_byte_order/: host_byte_order.cpp
src/inect_fun/: ntop_toy.cpp
src/serv_echo/: server.cpp
src/tcp_echo/: client.cpp  server.c  server.cpp  server_select.cpp
src/udp_echo/: client.cpp  server.cpp
tcp_echo/: clilent.c  server.c
